Point to server API

--- a/server/integrations/.env.template
+++ b/server/integrations/.env.template
@@ -7,8 +7,8 @@ MONGODB_CONNECTION_STRING="mongodb://root:rootpassword@localhost:27017"
 MONGODB_NAME="nettu-meeting"
 
 # SOME URLS that server needs to know about
-FRONTEND_URL="http://localhost:3000"
-SERVER_DOMAIN_NAME="localhost:5000"
+FRONTEND_URL="http://13.126.254.175:3000"
+SERVER_DOMAIN_NAME="13.126.254.175:5000"
 
 # Elasticsearch connection
 NETTU_ELASTIC_URL="http://localhost:9200"
