Rename to LifeMeet

--- a/server/integrations/.env.template
+++ b/server/integrations/.env.template
@@ -34,7 +34,7 @@ ACCOUNCEMENT_IP="127.0.0.1"
 
 # Default account
 ACCOUNT_NAME="nettumeet"
-ACCOUNT_LABEL="Nettu Meet"
+ACCOUNT_LABEL="LifeMeet"
 ACCOUNT_SECRET_KEY="nettu_meet_default_secret"
 ACCOUNT_REDIRECT_URI="http://localhost:3000"
 ACCOUNT_REDIRECT_URIS=""
