--- a/server/integrations/.env.template
+++ b/server/integrations/.env.template
@@ -1,20 +1,20 @@
 # Redis connection
-NETTU_REDIS_HOST="localhost"
-NETTU_REDIS_PORT=6379
+LIFEMEET_REDIS_HOST="localhost"
+LIFEMEET_REDIS_PORT=6379
 
 # MongoDB connection
 MONGODB_CONNECTION_STRING="mongodb://root:rootpassword@localhost:27017"
-MONGODB_NAME="nettu-meeting"
+MONGODB_NAME="life-meet"
 
 # SOME URLS that server needs to know about
 FRONTEND_URL="http://localhost:3000"
 SERVER_DOMAIN_NAME="localhost:5000"
 
 # Elasticsearch connection
-NETTU_ELASTIC_URL="http://localhost:9200"
+LIFEMEET_ELASTIC_URL="http://localhost:9200"
 
 # Kibana connection
-NETTU_KIBANA_URL="http://localhost:5601"
+LIFEMEET_KIBANA_URL="http://localhost:5601"
 
 # AWS credentials
 SES_EMAIL_SOURCE=""
@@ -33,11 +33,11 @@ ACCOUNCEMENT_IP="127.0.0.1"
 # LISTEN_IP="192.168.10.132"
 
 # Default account
-ACCOUNT_NAME="nettumeet"
+ACCOUNT_NAME="life-meet"
 ACCOUNT_LABEL="LifeMeet"
-ACCOUNT_SECRET_KEY="nettu_meet_default_secret"
+ACCOUNT_SECRET_KEY="life_meet_default_secret"
 ACCOUNT_REDIRECT_URI="http://localhost:3000"
 ACCOUNT_REDIRECT_URIS=""
 
 # Prod
-NETTU_IS_PRODUCTION="false"
+LIFEMEET_IS_PRODUCTION="false"
