--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nettu-meet-server",
+  "name": "life-meet-server",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -13,7 +13,7 @@
     "test:coverage": "jest --coverage"
   },
   "keywords": [
-    "nettu"
+    "life-meet"
   ],
   "author": "Fredrik Meringdal",
   "license": "ISC",
